promotion tiles: add link to delorean repo, fix timestamp, spacing

--- a/dlrnapi-dashboard/widgets/promotext/promotext.scss
+++ b/dlrnapi-dashboard/widgets/promotext/promotext.scss
@@ -25,8 +25,24 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     color: rgba(255, 255, 255, 0.7);
   }
 
-
   &.large h3 {
     font-size: 65px;
   }
+
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  a:active {
+    text-decoration: underline;
+  }
+
 }
